# robbuffet

./: .gitignore  404.html  CONTRIBUTING.md  MANIFEST.in  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
api/: index.html
avocet/: __init__.py  calibration.py  decision.py  region.py  scores.py  vis.py
changelog/: index.html
concepts/: index.html
contributing/: index.html
docs/: api.md  changelog.md  concepts.md  contributing.md  examples.md  index.md  publishing.md  quickstart.md
docs/css/: custom.css
examples/: README.md  index.html  robust_bike_newsvendor.py  robust_fractional_knapsack.py  robust_shortest_path.py  robust_shortest_path_metrla.py  robust_supply_planning.py  robust_union.py
publishing/: index.html
quickstart/: index.html
robbuffet/: __init__.py  data.py  decision.py  region.py  scores.py  vis.py
robcontrol/: README.md  assess.py  lqr_datasets.py  utils.py
scripts/: run_trials.py
search/: search_index.json
tests/: test_robustify.py
