[project]
name = "robbuffet"
version = "0.1.1"
description = "Conformal prediction and robust decision-making toolkit (PyTorch + CVXPY)"
authors = [{ name = "Yash Patel" }]
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "numpy>=1.24",
    "torch>=2.1.0",
    "cvxpy>=1.4.0",
    "matplotlib>=3.7.0",
    "networkx>=2.8",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.urls]
homepage = "https://github.com/yashpatel5400/robbuffet"
repository = "https://github.com/yashpatel5400/robbuffet"
[tool.setuptools.packages.find]
include = ["robbuffet", "robbuffet.*"]
exclude = ["tests", "docs", "examples"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
